# hacky_cloud_drive

./: .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  prompts.txt  pyproject.toml  temp.txt
api/: urls.py
api/storage/: admin.py  models.py  serializers.py  urls.py  views.py
api/storage/migrations/: 0001_initial.py  0002_initial.py  0003_file_updated_at_folder_updated_at.py
api/tests/: conftest.py  test_login.py  test_register.py
api/user/: admin.py  apps.py  models.py  urls.py  views.py
api/user/migrations/: 0001_initial.py  0002_customuser_root_folder_uuid.py  0003_alter_customuser_root_folder_uuid.py
config/: settings.py  urls.py
frontend/: pubspec.yaml
frontend/lib/: main.dart  routes.dart
frontend/lib/models/: user.dart
frontend/lib/providers/: auth_provider.dart
frontend/lib/screens/: dashboard_screen.dart  dashboard_screen_2.dart  login_screen.dart  register_screen.dart
frontend/lib/services/: api_service.dart  auth_service.dart
frontend/lib/utils/: constants.dart
frontend/lib/widgets/: custom_button.dart  input_field.dart
storage/: admin.py  models.py  serializers.py  urls.py  views.py
storage/migrations/: 0001_initial.py
